
SVN
---

JDO:   Resolved issue CASTOR-1506 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Restructured mapping syntax for named queries.
       Details: http://jira.codehaus.org/browse/CASTOR-1506
       (Werner - 20060823)

XML:   Resolved issue CASTOR-1493 using contribution from Simeon de Dios [sdedios@lehman.com]
       Fixed problem with wrong class names for elements of named complexType which are unbounded choice.
       Details: http://jira.codehaus.org/browse/CASTOR-1493
       (Werner - 20060822)

All:   Resolved issue CASTOR-1492 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added XML best practise document.
       Details: http://jira.codehaus.org/browse/CASTOR-1492
       (Werner - 20060820)

All:   Resolved issue CASTOR-1500 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with including all required class files in XML JAR.
       Details: http://jira.codehaus.org/browse/CASTOR-1500
       (Werner - 20060818)

XML:   Resolved issue CASTOR-1499 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Added support for named queries at the <class> level.
       Details: http://jira.codehaus.org/browse/CASTOR-1499
       (Werner - 20060818)

XML:   Resolved issue CASTOR-1495 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Moved successfull XML tests from Regression- to MasterTestSuite.
       Details: http://jira.codehaus.org/browse/CASTOR-1495
       (Ralf - 20060810)

All:   Resolved issue CASTOR-1488 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Refactored FieldDescriptor.
       Details: http://jira.codehaus.org/browse/CASTOR-1488
       (Ralf - 20060810)

Version 1.0.2, Aug 3, 2006
-------------------------------

JDO:   Resolved issue CASTOR-1487 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed bug in Castor's EHCache implementation.